# alphecstreet

./: .env.local.  .gitignore  README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: scratchpad.md
.cursor/rules/: alphecstreet.mdc
data/: README.md  __init__.py  add_tickers.py  database.py  download_sp500_yfinance.py
data/alphavantage/: QUICK_REFERENCE.md  README.md  __init__.py  alphavantagedocs.json  test_integration.py
data/alphavantage/core/: __init__.py  api_client.py
data/alphavantage/docs/: DATE_RANGE_GUIDE.md  MIGRATION_GUIDE.md
data/alphavantage/equities/: __init__.py  daily.py  intraday.py
data/alphavantage/options/: __init__.py  historical.py
data/yfinance/: README.md  __init__.py  add_tickers.py  download_indices.py  update_daily.py
examples/: README.md  basic_order_submission.py  interactive_order_tester.py  with_risk_checks.py
execution/: DESIGN.md  README.md  __init__.py  audit.py  connection.py  events.py  executor.py  models.py
infrastructure/database/: docker-compose.yml
infrastructure/database/init-scripts/: 01_market_data_schema.sql  02_intraday_data_schema.sql  03_options_data_schema.sql
research/: buynvdamonday.ipynb
tests/: __init__.py  conftest.py
tests/execution/: __init__.py  test_audit.py  test_connection.py  test_executor.py  test_models.py
